# pure_pursuit

./: README.md  package.xml  setup.py
config/: csv_pub_config.yaml  params.yaml  params_solo.yaml
launch/: pure_pursuit.launch.py  pure_pursuit_solo.launch.py
path/: example_path.csv  mansour_4_out.csv
pure_pursuit/: csv_path_publisher.py  pure_pursuit_node.py
